--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-  width: 105%;
+  width: 100%;
   height: 10vh;
   background-color: $card-color;
 
