--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -1,11 +1,12 @@
 @media only screen and (min-width: 320px) and (max-width: 768px) {
-  html {
+
+  body {
     overflow-x: hidden;
   }
 
   .navbar {
-    height: 4rem;
-    
+    height: 3rem;
+
     .profile {
       width: 1.5rem;
       height: 3.5rem;
@@ -13,52 +14,86 @@
 
     .right-side {
       bottom: 3rem;
-      right: 1.5rem;
+      right: 1.8rem;
+      font-size: 2.5rem;
     }
 
     .profile {
       img{
-        width: 10rem;
-        height: 11rem;
+        width: 8rem;
+        height: 9rem;
       }
     }
   }
 
   .container {
-    width: 120%;
-    left: 10%;
+    width: 100%;
+    
     > div {
-      height: 180px;
+      height: 120px;
+
       &:nth-of-type(1) {
-        font-size: 3.5rem;
-        padding-left: 2rem;
+        font-size: 2.5rem;
+        padding-top: 5rem;
+        padding-left: 7rem;
       }
 
       &:nth-of-type(4) {
         h3 {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         }
         i {
-          font-size: 5.5rem;
+          font-size: 2.5rem;
         }
       }
+
+      &:nth-of-type(6) {
+        span {
+          font-size: 1.6rem;
+        }
+      }
+
+      &:nth-of-type(9) {
+        h4 {
+          font-size: 1rem;
+          line-height: 20px;
+        }
+
+        mark {
+          font-size: 1rem;
+          padding-left: 0.1rem;
+        }
+      }
+    }
+  }
+  main {
+    h3 {
+      font-size: 2.5rem;
     }
   }
 
   .main-container {
-    left: 10%;
+    
     .images {
       img {
-        width: 70%;
+        width: 80%;
+      }
+
+      p {
+        font-size: 1.5rem;
+        right: 2%;
       }
     }
-  }
+  
 
   .skills {
+    width: 70%;
+    left: 10%;
     ul {
-      grid-gap: 10px;
+      grid-gap: 20px;
     }
   }
+}
 
   footer {
     ul {
@@ -66,37 +101,15 @@
       height: 10vh;
 
       i {
-        font-size: 2.3rem;
-        left: 150%;
+        font-size: 2rem;
+        left: 60%;
       }
       
       h3 {
-        width: 20%;
-        font-size: 1rem;
+        width: 25%;
+        font-size: 0.7rem;
         padding-right: 0.2rem;
-        padding-top: 0.8rem;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .container {
-    > div {
-      &:nth-of-type(6) {
-        font-size: 3.5rem;
-      }
-
-      &:nth-of-type(9) {
-        font-size: 3.5rem;
-      }
-    }
-  }
-
-  .main-container {
-    .images {
-      p {
-        font-size: 2.3rem;
+        //padding-top: 0.8rem;
       }
     }
   }
