--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -1,4 +1,5 @@
 .navbar {
+  width: 100%;
   background-color: $primary-color;
   height: 6rem;
   position: relative;
@@ -15,6 +16,7 @@
 
   .profile {
     position: relative;
+    width: 10%;
     left: 5%;
     top: 20%;
   }
