--- a/styles/_skills.scss
+++ b/styles/_skills.scss
@@ -1,12 +1,14 @@
 .skills {
   position: relative;
-  left: 20%;
-  width: 60%;
+  left: 25%;
+  width: 70%;
 
 
   h3 {
     margin-top: 3rem;
     margin-bottom: 3rem;
+    
+    
   }
 
   ul {
