--- a/styles/style.scss
+++ b/styles/style.scss
@@ -25,5 +25,6 @@ a {
 }
 
 body {
+  overflow-x: hidden;
   background-color: $primary-color;
 }
